--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,3 +20,12 @@ jobs:
     - name: Build with ESP-IDF Docker image
       run: |
         docker run --rm -v ${{ github.workspace }}:/project -w /project espressif/idf idf.py build
+
+    - name: Upload firmware artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: firmware
+        path: |
+          build/*.bin
+          build/*.elf
+          build/flasher_args.json
