modified:   .github/workflows/build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,39 +1,28 @@
-name: ESP-IDF Build
+name: Build & Release ESP Firmware
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    tags:
+      - 'v*'  # Например: v1.0.0, v2.3.4
 
 jobs:
-  build:
+  build-and-release:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Build with ESP-IDF Docker image
+    - name: Build with Docker (ESP-IDF)
       run: |
-        docker run --rm -v ${{ github.workspace }}:/project -w /project espressif/idf idf.py build
+        docker run --rm \
+          -v ${{ github.workspace }}:/project \
+          -w /project \
+          espressif/idf idf.py build
 
-    - name: Upload firmware artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: firmware
-        path: |
-          build/*.bin
-          build/*.elf
-          build/flasher_args.json
-
-    - name: Upload to GitHub Release
+    - name: Upload firmware to GitHub Release
       uses: softprops/action-gh-release@v2
       with:
-        tag_name: v1.0.0
         files: |
           build/*.bin
           build/*.elf
