--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,4 @@
-idf_component_register(SRCS "hello_world.c"
-                    INCLUDE_DIRS "")
+file(GLOB_RECURSE srcs "main.c" "src/*.c")
+
+idf_component_register(SRCS "${srcs}"
+                       INCLUDE_DIRS "./include")
